Interfaz de reserva de cita y menu de opciones de especialista

--- a/Auriculoterapia/app/src/main/res/layout/activity_main.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    tools:context=".activities.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/home_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:text="Inicio"
+            android:textAlignment="textStart"
+            android:textSize="25sp" />
+
+        <ImageView
+            android:id="@+id/avatar_image"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:srcCompat="@drawable/avatar_image" />
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Paulo Alejos"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="12dp"
+            android:background="@android:color/darker_gray" />
+
+
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="380dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.226">
+
+
+        <ImageButton
+            android:id="@+id/appointment_option"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="#8BC34A"
+            android:src="@drawable/appointments_image"
+            app:layout_constraintEnd_toStartOf="@+id/patient_option"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/patient_option"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_marginTop="32dp"
+            android:src="@drawable/patient_image"
+            app:layout_constraintEnd_toStartOf="@+id/results_option"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/appointment_option"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/results_option"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="398dp"
+            android:src="@drawable/results_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/patient_option"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/notifications_option"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_marginStart="42dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="280dp"
+            android:src="@drawable/notifications_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appointment_option" />
+
+        <ImageButton
+            android:id="@+id/configuration_option"
+            android:layout_width="70sp"
+            android:layout_height="70sp"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="280dp"
+            android:src="@drawable/settings_image_2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.217"
+            app:layout_constraintStart_toEndOf="@+id/notifications_option"
+            app:layout_constraintTop_toBottomOf="@+id/patient_option" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
