--- a/Auriculoterapia/app/src/main/res/layout/activity_main_patient.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_main_patient.xml
@@ -40,7 +40,7 @@
             android:id="@+id/user_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Paulo Alejos"
+            android:text="Marcos Rivas"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -118,7 +118,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/patient_option"
+                android:id="@+id/treatment_option"
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:layout_margin="16dp"
@@ -126,7 +126,7 @@
                 app:cardElevation="8dp">
 
                 <LinearLayout
-                    android:id="@+id/button_pacientes"
+                    android:id="@+id/button_tratamiento"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -142,13 +142,13 @@
                         android:layout_width="58dp"
                         android:layout_height="58dp"
                         android:layout_gravity="center"
-                        android:background="@drawable/patient_image"
+                        android:background="@drawable/treatment_image"
                         android:backgroundTint="@color/colorAccent" />
 
                     <TextView
-                        android:layout_width="68dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/pacientes_menu"
+                        android:text="@string/tratamiento_menu"
                         android:textAlignment="center"
                         android:textSize="13sp" />
                 </LinearLayout>
@@ -259,4 +259,4 @@
         </GridLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
