--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".fragments.AppointmentRegisterFragment">
+    tools:context=".fragments.specialist.AppointmentRegisterFragment">
 
 
         <TextView
@@ -17,15 +17,14 @@
             android:layout_marginEnd="24dp"
             android:text="@string/patient_text"
             android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/spinner"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/patientSpinner"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/patientSpinner"
+            android:layout_width="187dp"
+            android:layout_height="29dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="52dp"
             android:spinnerMode="dropdown"
@@ -39,36 +38,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="72dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="56dp"
             android:layout_marginEnd="24dp"
             android:text="@string/date_text"
             android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/editTextDate2"
+            app:layout_constraintEnd_toStartOf="@+id/dateEditText"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <EditText
-            android:id="@+id/editTextDate2"
-            style="@style/Widget.AppCompat.EditText"
+        <TextView
+            android:id="@+id/dateEditText"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="56dp"
             android:layout_marginEnd="52dp"
-            android:ems="10"
-            android:hint="@string/date_hint"
-            android:inputType="date"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/spinner" />
+            app:layout_constraintTop_toBottomOf="@+id/patientSpinner" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="82dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="24dp"
             android:text="@string/time_text"
             android:textSize="18sp"
@@ -89,7 +85,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />
+            app:layout_constraintTop_toBottomOf="@+id/dateEditText" />
 
         <TextView
             android:id="@+id/textView5"
