--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="52dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="56dp"
             android:layout_marginEnd="24dp"
             android:text="@string/patient_text"
             android:textSize="18sp"
@@ -23,8 +23,8 @@
 
         <Spinner
             android:id="@+id/patientSpinner"
-            android:layout_width="187dp"
-            android:layout_height="29dp"
+            android:layout_width="247dp"
+            android:layout_height="34dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="52dp"
             android:spinnerMode="dropdown"
@@ -33,60 +33,77 @@
             app:layout_constraintStart_toEndOf="@+id/textView"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="56dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="64dp"
             android:layout_marginEnd="24dp"
             android:text="@string/date_text"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/dateEditText"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.428"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/dateEditText"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="52dp"
+            android:layout_width="120dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="56dp"
 
+            android:layout_marginEnd="12dp"
             android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/timeButtonDialog"
+            app:layout_constraintTop_toBottomOf="@+id/patientSpinner" />
+
+        <Button
+            android:id="@+id/dateButtonDialog"
+            android:layout_width="40dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="48dp"
+            android:background="@drawable/date_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/patientSpinner" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="82dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="44dp"
             android:text="@string/time_text"
             android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/textViewHora"
+            app:layout_constraintHorizontal_bias="0.424"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="52dp"
-            android:ems="10"
-            android:hint="@string/time_hint"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView4"
+
+        <TextView
+            android:id="@+id/textViewHora"
+            android:layout_width="120dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="12dp"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/timeButtonDialog"
             app:layout_constraintTop_toBottomOf="@+id/dateEditText" />
+
+        <Button
+            android:id="@+id/timeButtonDialog"
+            android:layout_width="40dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="38dp"
+            android:layout_marginEnd="48dp"
+            android:background="@drawable/time_image"
+            app:layout_constraintBottom_toTopOf="@+id/tipoAtencionSpinner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dateButtonDialog"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView5"
@@ -97,21 +114,23 @@
             android:text="@string/attention_text"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/button"
-            app:layout_constraintEnd_toStartOf="@+id/spinner2"
+            app:layout_constraintEnd_toStartOf="@+id/tipoAtencionSpinner"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4"
             app:layout_constraintVertical_bias="0.437" />
 
         <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/tipoAtencionSpinner"
+            android:layout_width="175dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="60dp"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+            app:layout_constraintStart_toEndOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/textViewHora" />
 
         <Button
             android:id="@+id/button"
@@ -126,7 +145,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner2"
+            app:layout_constraintTop_toBottomOf="@+id/tipoAtencionSpinner"
             app:layout_constraintVertical_bias="0.014" />
 
 
