--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
@@ -17,18 +17,18 @@
         android:layout_marginEnd="24dp"
         android:text="@string/num_celular_text"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/spinner"
+        app:layout_constraintEnd_toStartOf="@+id/celularEditText"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="204dp"
-        android:layout_height="24dp"
+    <EditText
+        android:id="@+id/celularEditText"
+        android:hint="Ingrese su número"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="18dp"
-        android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView"
@@ -60,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
 
     <TextView
         android:id="@+id/textView4"
@@ -98,15 +98,15 @@
         android:layout_marginEnd="24dp"
         android:text="@string/attention_text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/spinner2"
+        app:layout_constraintBottom_toTopOf="@+id/registerAppointmentButton"
+        app:layout_constraintEnd_toStartOf="@+id/celularEditText2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.437" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/celularEditText2"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
@@ -116,7 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/registerAppointmentButton"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -128,7 +128,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        app:layout_constraintTop_toBottomOf="@+id/celularEditText2"
         app:layout_constraintVertical_bias="0.014" />
 
 
