--- a/Auriculoterapia/app/src/main/res/layout/activity_appointment_patient_management.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_appointment_patient_management.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.AppointmentManagement">
+    tools:context=".activities.AppointmentPatientManagement">
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
