--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
@@ -5,118 +5,132 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".fragments.specialist.AppointmentRegisterFragment">
+    tools:context=".fragments.patient.AppointmentPatientRagisterFragment">
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/celularTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="82dp"
+        android:layout_marginTop="70dp"
         android:text="@string/num_celular_text"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/celularEditText"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/celularEditText"
-        android:hint="Ingrese su número"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:hint="Ingrese su número"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toEndOf="@+id/celularTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/pacienteTextView3"
+        android:layout_width="49dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginStart="54dp"
         android:layout_marginEnd="24dp"
         android:text="@string/date_text"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextDate2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <EditText
-        android:id="@+id/editTextDate2"
-        style="@style/Widget.AppCompat.EditText"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="52dp"
-        android:ems="10"
-        android:hint="@string/date_hint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFechaPaciente"
+        app:layout_constraintEnd_toStartOf="@+id/textViewFechaPaciente"
+        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewFechaPaciente"
+        android:layout_width="120dp"
+        android:layout_height="32dp"
+
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="24dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/timeButtonDialogPatient"
+        app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
+
+    <Button
+        android:id="@+id/dateButtonDialogPatient"
+        android:layout_width="40dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/date_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
+
+
+    <TextView
+        android:id="@+id/pacienteTextView4"
+        android:layout_width="39dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="82dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginStart="54dp"
         android:layout_marginEnd="24dp"
         android:text="@string/time_text"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="52dp"
-        android:ems="10"
-        android:hint="@string/time_hint"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/pacienteTextViewHora"
+        app:layout_constraintEnd_toStartOf="@+id/pacienteTextViewHora"
+        app:layout_constraintHorizontal_bias="0.725"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:id="@+id/pacienteTextViewHora"
+        android:layout_width="120dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="24dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/timeButtonDialogPatient"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFechaPaciente" />
+
+    <Button
+        android:id="@+id/timeButtonDialogPatient"
+        android:layout_width="40dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/time_image"
+        app:layout_constraintBottom_toTopOf="@+id/tipoAtencionSpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateButtonDialogPatient"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/celularTextView5"
+        android:layout_width="72dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="24dp"
         android:text="@string/attention_text"
+        android:textAlignment="textEnd"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/registerAppointmentButton"
-        app:layout_constraintEnd_toStartOf="@+id/celularEditText2"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/registerAppointmentButtonPatient"
+        app:layout_constraintEnd_toStartOf="@+id/spinnerAttentionPatient"
+        app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.437" />
+        app:layout_constraintTop_toBottomOf="@+id/pacienteTextView4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
-        android:id="@+id/celularEditText2"
+        android:id="@+id/spinnerAttentionPatient"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="68dp"
         android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/timeButtonDialogPatient" />
 
     <Button
-        android:id="@+id/registerAppointmentButton"
+        android:id="@+id/registerAppointmentButtonPatient"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -128,7 +142,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/celularEditText2"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAttentionPatient"
         app:layout_constraintVertical_bias="0.014" />
 
 
