--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_register.xml
@@ -7,9 +7,10 @@
     android:layout_gravity="center"
     tools:context=".fragments.specialist.AppointmentRegisterFragment">
 
-
+        
+        
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/pacienteTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="52dp"
@@ -30,12 +31,12 @@
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintStart_toEndOf="@+id/pacienteTextView"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/pacienteTextView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
@@ -46,7 +47,7 @@
             app:layout_constraintEnd_toStartOf="@+id/dateEditText"
             app:layout_constraintHorizontal_bias="0.428"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/pacienteTextView" />
 
         <TextView
             android:id="@+id/dateEditText"
@@ -70,7 +71,7 @@
             app:layout_constraintTop_toBottomOf="@+id/patientSpinner" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/pacienteTextView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="54dp"
@@ -80,7 +81,7 @@
             app:layout_constraintEnd_toStartOf="@+id/textViewHora"
             app:layout_constraintHorizontal_bias="0.424"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/pacienteTextView3" />
 
 
         <TextView
@@ -106,7 +107,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/pacienteTextView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
@@ -117,7 +118,7 @@
             app:layout_constraintEnd_toStartOf="@+id/tipoAtencionSpinner"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/pacienteTextView4"
             app:layout_constraintVertical_bias="0.443" />
 
         <Spinner
@@ -129,7 +130,7 @@
             android:layout_marginEnd="60dp"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
+            app:layout_constraintStart_toEndOf="@+id/pacienteTextView5"
             app:layout_constraintTop_toBottomOf="@+id/textViewHora" />
 
         <Button
