--- a/Auriculoterapia/app/src/main/res/layout/appointment_item.xml
+++ b/Auriculoterapia/app/src/main/res/layout/appointment_item.xml
@@ -82,11 +82,13 @@
            >
 
             <Button
+                android:id="@+id/botonCancelar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cancelar"/>
 
             <Button
+                android:id="@+id/botonModificar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Modificar"
