--- a/Auriculoterapia/app/src/main/res/layout/activity_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_register.xml
@@ -128,8 +128,8 @@
         android:id="@+id/et_keyword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="29dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="@string/str_keywordhint"
         android:inputType="textPersonName"
@@ -152,25 +152,67 @@
         android:id="@+id/spinner3"
         android:layout_width="213dp"
         android:layout_height="35dp"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="292dp" />
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_Fecha" />
 
     <EditText
         android:id="@+id/et_Fecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="seleccionar fecha"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="175dp"
-        tools:layout_editor_absoluteY="219dp" />
+        app:layout_constraintStart_toEndOf="@+id/tvFechaNacimiento"
+        app:layout_constraintTop_toBottomOf="@+id/et_apellido" />
 
     <Button
         android:id="@+id/buttonRegister"
+        android:layout_width="120dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="66dp"
+        android:text="@string/registrar_button_main"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_email" />
+
+    <TextView
+        android:id="@+id/tv_resultadoGenero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/registrar_button_main"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="571dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/spinner3"
+        app:layout_constraintStart_toEndOf="@+id/tvSeleccionarSexo"
+        app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimiento" />
+
+    <TextView
+        android:id="@+id/tv_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:text="Correo:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvKeyWordRegistro" />
+
+    <EditText
+        android:id="@+id/et_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="correo"
+        android:inputType="textEmailAddress"
+        app:layout_constraintStart_toEndOf="@+id/tv_email"
+        app:layout_constraintTop_toBottomOf="@+id/et_keyword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
