configuracion y actualizar contrasena

--- a/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_keyWord"
+        android:id="@+id/et_keyWord2"
         android:layout_width="189dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_usuario" />
 
     <TextView
-        android:id="@+id/tv_KeyWord"
+        android:id="@+id/tv_settingKeyWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
@@ -40,7 +40,7 @@
         android:layout_marginBottom="60dp"
         android:text="@string/str_keywordLabel"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/et_keyWord"
+        app:layout_constraintEnd_toStartOf="@+id/et_keyWord2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_usuario" />
@@ -82,7 +82,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_keyWord" />
+        app:layout_constraintTop_toBottomOf="@+id/et_keyWord2" />
 
     <TextView
         android:id="@+id/tv_usuario"
