--- a/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_appointment_patient_ragister.xml
@@ -56,13 +56,15 @@
         app:layout_constraintEnd_toStartOf="@+id/timeButtonDialogPatient"
         app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
 
-    <Button
+    <ImageButton
         android:id="@+id/dateButtonDialogPatient"
-        android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_width="45dp"
+        android:layout_height="40dp"
+        android:tint="#F6F4F4"
+        android:background="@color/colorPrimary"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="48dp"
-        android:background="@drawable/date_image"
+        android:src="@drawable/date_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/celularEditText" />
 
@@ -90,13 +92,15 @@
         app:layout_constraintEnd_toStartOf="@+id/timeButtonDialogPatient"
         app:layout_constraintTop_toBottomOf="@+id/textViewFechaPaciente" />
 
-    <Button
+    <ImageButton
         android:id="@+id/timeButtonDialogPatient"
-        android:layout_width="40dp"
-        android:layout_height="34dp"
+        android:layout_width="45dp"
+        android:layout_height="40dp"
+        android:tint="#F6F4F4"
+        android:background="@color/colorPrimary"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="48dp"
-        android:background="@drawable/time_image"
+        android:src="@drawable/time_image"
         app:layout_constraintBottom_toTopOf="@+id/tipoAtencionSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateButtonDialogPatient"
