--- a/Auriculoterapia/app/src/main/res/layout/fragment_availability.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_availability.xml
@@ -15,25 +15,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:padding="16dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/disponibilidad_margin_bottom">
+                android:layout_marginBottom="@dimen/disponibilidad_margin_bottom"
+                android:padding="8dp"
+                >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/disponibilidad_seleccionar_dia"
+                    android:textAlignment="textEnd"
                     android:textSize="@dimen/text_size"
-                    android:layout_marginEnd="20dp"/>
+                    android:layout_marginEnd="10dp"/>
+
                 <Spinner
                     android:id="@+id/spinner_fecha_disponibilidad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_size"/>
+                    android:textSize="@dimen/text_size" />
 
             </LinearLayout>
 
@@ -55,20 +59,24 @@
                 android:gravity="center">
 
                 <EditText
+                    android:id="@+id/inicio_recurrente_disponibilidad"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="09:00"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="10dp"/>
+                    android:layout_marginEnd="10dp"
+                    android:inputType="time"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="-"/>
                 <EditText
+                    android:id="@+id/fin_recurrente_disponibilidad"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:hint="18:00"
+                    android:inputType="time"
                     android:layout_marginStart="10dp"/>
 
             </LinearLayout>
@@ -96,6 +104,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="09:00"
+                        android:inputType="time"
                         android:layout_gravity="center"
                         android:layout_marginEnd="10dp"/>
                     <TextView
@@ -107,6 +116,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:inputType="time"
                         android:hint="18:00"
                         android:layout_marginStart="10dp"/>
 
@@ -132,6 +142,7 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <Button
+                android:id="@+id/boton_guardar_disponibilidad"
                 android:layout_width="match_parent"
                 android:layout_margin="30dp"
                 android:layout_height="wrap_content"
