--- a/Auriculoterapia/app/src/main/res/layout/activity_main.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,15 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:orientation="vertical"
+        android:padding="16dp"
         android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -46,17 +46,14 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:textAlignment="center"
+        android:id="@+id/constraintLayout"
         android:layout_width="380dp"
         android:layout_height="500dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
+        tools:layout_editor_absoluteY="111dp">
 
 
         <GridLayout
@@ -169,8 +166,7 @@
                         android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:background="@drawable/chart_image"
-                        android:backgroundTint="@color/colorAccent"
-                        />
+                        android:backgroundTint="@color/colorAccent" />
 
                     <TextView
                         android:layout_width="wrap_content"
