--- a/Auriculoterapia/app/src/main/res/layout/activity_main_patient.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_main_patient.xml
@@ -12,23 +12,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:orientation="vertical"
+        android:padding="16dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/home_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10sp"
-            android:text="Inicio"
-            android:textAlignment="textStart"
-            android:textSize="25sp" />
 
         <ImageView
             android:id="@+id/avatar_image"
@@ -56,14 +46,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="380dp"
         android:layout_height="500dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
 
         <GridLayout
@@ -176,8 +161,7 @@
                         android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:background="@drawable/chart_image"
-                        android:backgroundTint="@color/colorAccent"
-                        />
+                        android:backgroundTint="@color/colorAccent" />
 
                     <TextView
                         android:layout_width="wrap_content"
